[package]
name = "net-utils"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
rand = "0.8"
lazy_static = "1.4"
nix = { version = "0.29.0", features = ["signal", "process"] }
signal-hook = "0.3"
portable-pty = "0.9" 

winapi = { version = "0.3", features = ["winbase", "processthreadsapi", "handleapi", "memoryapi", "synchapi", "minwinbase", "minwindef", "winnt"] }

[build-dependencies]
static_vcruntime = "2.0"

[[bin]]
name = "net_shell"
path = "src/net_shell.rs"

[[bin]]
name = "net_listener"
path = "src/net_listener.rs"

[[bin]]
name = "net_client"
path = "src/net_client.rs"

[[bin]]
name = "tcp_proxy"
path = "src/tcp_proxy.rs"

[[bin]]
name = "udp_proxy"
path = "src/udp_proxy.rs"
